--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "北大猫咪图鉴",
+    "navigationBarTitleText": "中科路1号猫咪图鉴",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
